[gd_scene load_steps=5 format=3 uid="uid://cds7b1eobo76o"]

[ext_resource type="Script" path="res://menu/over_screen.gd" id="1_7io82"]

[sub_resource type="SystemFont" id="SystemFont_jpr0r"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_fjp00"]
font = SubResource("SystemFont_jpr0r")
font_size = 57

[sub_resource type="LabelSettings" id="LabelSettings_4j4yf"]
font_size = 30
outline_size = 10
outline_color = Color(0.105882, 0.329412, 0.105882, 1)
shadow_size = 5
shadow_offset = Vector2(10, 1)

[node name="overScreen" type="CanvasLayer"]
script = ExtResource("1_7io82")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.380392, 0.529412, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -489.0
offset_top = -167.0
offset_right = 505.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
text = "‚îÄ‚ï§‚ï¶Ô∏ª ∆ìê§†êíÑ∆∏ Œò∆≤∆∏‚±§ Ô∏ª‚ï¶‚ï§‚îÄ"
label_settings = SubResource("LabelSettings_fjp00")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Score" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -32.0
offset_right = 126.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "Score:"
label_settings = SubResource("LabelSettings_4j4yf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighestScore" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = 16.0
offset_right = 128.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
text = "Highest score:"
label_settings = SubResource("LabelSettings_4j4yf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 85.0
offset_right = 125.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
text = "Back to the menu"

[node name="Exit" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 155.0
offset_right = 109.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit to desktop"

[connection signal="pressed" from="ColorRect/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="ColorRect/Exit" to="." method="_on_exit_pressed"]
